--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 My first HTML page <br>
-<a href="first.html">First</a><br>
+<a href="first.html">First Page</a><br>
 <a href="csslinks.html">CSS of a link - Simple example</a><br>
 
 <img src="ceit.jpg">
