--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
+  <head>
+    <title>Homepage sample</title>
+  </head>
+  <body>
   My first HTML page <br>
   <a href="first.html">First Page</a><br>
   <a href="csslinks.html">CSS of a link - Simple example</a><br>
   <p><a href="cssbutton.html">CSS of a link - Sample Button</a></p>
   <p>Sample image</p>
   <img src="ceit.jpg">
+  </body>
+</html>
