--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title>Homepage sample</title>
+    <style>
+      body {
+        background-image:url("ceit.jpg");
+/*         background-size:cover; */
+      }
+    </style>
   </head>
   <body>
   My first HTML page <br>
