--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
       body {
         background-image:url("ceit.jpg");
-/*         background-size:cover; */
+        background-size:cover;
       }
     </style>
   </head>
