--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="first.html">First Page</a><br>
   <a href="csslinks.html">CSS of a link - Simple example</a><br>
   <p><a href="cssbutton.html">CSS of a link - Sample Button</a></p>
-  <p>Sample image</p>
-  <img src="ceit.jpg">
+<!--   <p>Sample image</p>
+  <img src="ceit.jpg"> -->
   </body>
 </html>
